# Platypus

./: .gitignore  .pre-commit-config.yaml  .project  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.md  comparison.py  example.py  example_CMAES.py  example_EpsMOEA.py  example_EpsilonMOEA.py  example_GDE3.py  example_IBEA.py  example_MOEAD.py  example_MOPSO.py  example_NSGAII.py  example_NSGAIII.py  example_OMOPSO.py  example_SMPSO.py  example_SPEA2.py  example_WFG.py  example_operators.py  experimenter_demo.py  plot_operators.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: examples.yml  release.yml  stale.yml  test-and-publish.yml  tests.yml
docs/: algorithms.rst  api.rst  cli.rst  conf.py  experimenter.rst  getting-started.rst  index.rst  types.rst
docs/api/: platypus.algorithms.rst  platypus.config.rst  platypus.core.rst  platypus.distance.rst  platypus.errors.rst  platypus.evaluator.rst  platypus.experimenter.rst  platypus.extensions.rst  platypus.filters.rst  platypus.indicators.rst  platypus.io.rst  platypus.mpipool.rst  platypus.operators.rst  platypus.problems.rst  platypus.rst  platypus.types.rst  platypus.weights.rst
examples/: DTLZ2.2D.pf  comparison.py  constrained_problem_1.py  constrained_problem_2.py  constrained_problem_class.py  constrained_problem_function.py  custom_problem_1.py  custom_problem_2.py  custom_problem_class.py  custom_problem_function.py  customize_variator.py  example_objective_repository.py  example_permutation.py  example_pso.py  experimenter.py  experimenter_parallel.py  experimenter_plot.py  importance.py  indicator.py  knapsack.py  logging_example.py  parallel_mpi.py  parallel_multiprocess.py  particle_swarm.py  performance_indicators.py  permutation.py  plot_operators.py  plot_results.py  print_attributes.py  print_results.py  problem_with_arguments.py  resumable_run.py  runtime.py  runtime_plot.py  save_results_extension.py  save_results_json.py  simple.py  simple_indicators.py  simple_logging.py  simple_mpi.py  (+4 more)
platypus/: __init__.py  __main__.py  _math.py  _tools.py  algorithms.py  config.py  core.py  deprecated.py  distance.py  errors.py  evaluator.py  experimenter.py  extensions.py  filters.py  indicators.py  io.py  math.py  mpipool.py  operators.py  plotter.py  problems.py  recorder.py  settings.py  test.py  tools.py  types.py  weights.py  wrappers.py
platypus/tests/: _utils.py  test_algorithms.py  test_config.py  test_core.py  test_distance.py  test_filters.py  test_indicators.py  test_io.py  test_main.py  test_math.py  test_operators.py  test_problems.py  test_tools.py  test_types.py
