[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Platypus-Opt"
description = "Multiobjective optimization in Python"
authors = [
  { name="David Hadka", email="dhadka@users.noreply.github.com" },
]
readme = "README.md"
license = { file="COPYING" }
requires-python = ">= 3.8"
dependencies = []
dynamic = ["version"]  # Version is read from platypus/__init__.py

[project.urls]
"Homepage" = "https://github.com/Project-Platypus/Platypus"
"Documentation" = "https://platypus.readthedocs.io/"
"Bug Tracker" = "https://github.com/Project-Platypus/Platypus/issues"

[project.optional-dependencies]
test = ["pytest", "mock", "flake8", "numpy"]
doc = ["sphinx"]
full = ["mpi4py", "matplotlib", "Platypus-Opt[test]", "Platypus-Opt[doc]"]

[tool.setuptools.dynamic]
version = {attr = "platypus.__version__"}
