[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Platypus-Opt"
description = "Multiobjective optimization in Python"
authors = [
  { name="David Hadka", email="dhadka@users.noreply.github.com" },
]
readme = "README.md"
license = { file="COPYING" }
requires-python = ">= 3.8"
dependencies = []
dynamic = ["version"]  # Version is read from platypus/__init__.py

[project.urls]
"Homepage" = "https://github.com/Project-Platypus/Platypus"
"Documentation" = "https://platypus.readthedocs.io/"
"Bug Tracker" = "https://github.com/Project-Platypus/Platypus/issues"

[project.optional-dependencies]
test = ["pytest", "mock", "flake8", "Flake8-pyproject", "numpy"]
doc = ["sphinx"]
full = ["mpi4py", "matplotlib", "Platypus-Opt[test]", "Platypus-Opt[doc]"]

[tool.setuptools.dynamic]
version = {attr = "platypus.__version__"}

[tool.pytest.ini_options]
addopts = "-rA -Werror"
testpaths = ["platypus"]

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "build",
]
extend-ignore = [
  "E302",  # Expected 2 blank lines, found N
  "E305",  # Expected 2 blank lines after class or function definition, found N
  "E501",  # Line too long (N > 79 characters)
  "E741",  # Do not use variables named 'I', 'O', or 'l'
]
per-file-ignores = [
  "__init__.py:F401",  # Module imported but unused
]
