[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Platypus-Opt"
description = "Multiobjective optimization in Python"
authors = [
  { name="David Hadka", email="dhadka@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">= 3.9"
dependencies = []
dynamic = ["version"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = [
    "optimization",
    "evolutionary algorithm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://github.com/Project-Platypus/Platypus"
Documentation = "https://platypus.readthedocs.io/"
Issues = "https://github.com/Project-Platypus/Platypus/issues"

[project.optional-dependencies]
test = ["pytest", "mock", "flake8", "flake8-pyproject", "numpy", "matplotlib", "jsonpickle"]
docs = ["sphinx", "sphinx-rtd-theme"]
full = ["mpi4py", "Platypus-Opt[test]", "Platypus-Opt[docs]"]

[project.scripts]
platypus = "platypus.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "platypus.__version__"}

[tool.pytest.ini_options]
addopts = "-rA -Werror"
testpaths = ["platypus"]

[tool.flake8]
exclude = [
  ".git",
  "__pycache__",
  "build",
]
extend-ignore = [
  "E302",  # Expected 2 blank lines, found N
  "E305",  # Expected 2 blank lines after class or function definition, found N
  "E501",  # Line too long (N > 79 characters)
  "E741",  # Do not use variables named 'I', 'O', or 'l'
]
per-file-ignores = [
  "__init__.py:F401",  # Module imported but unused
]
